# automann

./: .env.example  .gitignore  README.md  pyproject.toml
apps/api/: __init__.py  automation_service.py  codex_session_service.py  dependencies.py  main.py  services.py
apps/tui/: __init__.py  agentboard_bridge.py  client.py  main.py  ui.py
apps/web/: __init__.py  router.py
docs/: IMPLEMENTATION_TODO.md  architecture.md  sqlite-cutover.md  taxonomy-database.md
flows/: __init__.py  artifact_ingest.py  browser_job.py  codex_search_report.py  common.py  daily_brief.py  draft_article.py  paper_batch.py  paper_review.py  registry.py  research_report.py  search_report.py  serve.py
infra/compose/: compose.yaml
infra/prefect/: README.md
infra/sql/: 002_life_extensions.sql  003_life_schema.sql
libs/: __init__.py  config.py  report_taxonomy.py
libs/contracts/: __init__.py  events.py  (+2 more)
schemas/: paper-annotations.schema.json  research-report.schema.json
scripts/: __init__.py  bootstrap_life_system.py  migrate_life_postgres_to_sqlite.py  run_api.sh  run_prefect_serve.sh  run_prefect_server.sh  run_prefect_worker.sh  setup_local_stack.sh  shutdown_local_stack.sh  stop_local_stack.sh
tests/: test_api_web.py  test_artifact_ingest_flow.py  test_artifact_ingest_runner.py  test_automations_api.py  test_browser_job_flow.py  test_browser_models.py  test_browser_runner.py  test_chunking.py  test_codex_app_server_transport.py  test_codex_interaction_bridge.py  test_codex_runner_slice.py  test_codex_runs_stream_api.py  test_codex_search_report_flow.py  test_codex_search_session_runner.py  test_codex_session_runner.py  test_codex_session_service.py  test_daily_brief_flow.py  test_daily_brief_workers.py  test_draft_flow.py  test_draft_publish_workers.py  test_flow_registry.py  test_orchestration_browser_fail_closed.py  test_orchestration_codex_interactive.py  test_paper_annotations_schema.py  test_paper_batch_flow.py  test_paper_review_pipeline.py  test_publication_bundle.py  test_research_contracts.py  test_research_report_flow.py  test_research_worker.py  test_retrieval_service.py  test_search_report_flow.py  test_sqlite_migration.py  test_sqlite_repository.py
workers/: __init__.py  common.py
(+64 files in other folders)
